--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "joblib (>=1.4.2,<2.0.0)",
     "pydantic (>=2.10.6,<3.0.0)",
     "requests (>=2.32.3,<3.0.0)",
-    "pandas (>=2.2.3,<3.0.0)"
+    "pandas (>=2.2.3,<3.0.0)",
+    "mlflow (>=2.20.1,<3.0.0)",
 ]
 
 
