--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,18 @@ dependencies = [
     "requests (>=2.32.3,<3.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
     "mlflow (>=2.20.1,<3.0.0)",
+    "httpx (>=0.28.1,<0.29.0)",
+]
+
+[tool.poetry]
+packages = [
+    { include = "app" }
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
