--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Flavian Reignault",email = "flavian.reignault@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<4.0"
 dependencies = [
     "fastapi (>=0.115.8,<0.116.0)",
     "uvicorn (>=0.34.0,<0.35.0)",
@@ -17,6 +17,8 @@ dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
     "mlflow (>=2.20.1,<3.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
+    "evidently (>=0.6.1,<0.7.0)",
+    "prometheus-client (>=0.21.1,<0.22.0)",
 ]
 
 [tool.poetry]
