--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Deploy Infrastructure to GCP
 
 on:
   push:
@@ -48,3 +48,26 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build Docker image
         run: docker build -f Dockerfile.api -t wine-quality-prediction:latest .
+    
+  terraform:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.4.6  
+      - name: Authenticate with GCP
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }} 
+      - name: Initialize Terraform
+        run: terraform init
+        working-directory: terraform  
+      - name: Plan Terraform
+        run: terraform plan
+        working-directory: terraform
+      - name: Apply Terraform
+        run: terraform apply -auto-approve
+        working-directory: terraform
