--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Pull model from DVC
         run: |
-          dvc pull app/model/red_wine_model.pkl
+          poetry run dvc pull app/model/red_wine_model.pkl
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -69,8 +69,8 @@ jobs:
         run: terraform init
         working-directory: terraform  
       - name: Plan Terraform
-        run: terraform plan
+        run: terraform plan -var "credentials_file=${{ secrets.GCP_SA_KEY }}"
         working-directory: terraform
       - name: Apply Terraform
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -var "credentials_file=${{ secrets.GCP_SA_KEY }}"
         working-directory: terraform
