--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "httpx (>=0.28.1,<0.29.0)",
     "evidently (>=0.6.1,<0.7.0)",
     "prometheus-client (>=0.21.1,<0.22.0)",
+    "dvc-gs (>=3.0.1,<4.0.0)",
 ]
 
 [tool.poetry]
