--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -73,7 +73,10 @@ jobs:
           credentials_json: ${{ secrets.GCP_SA_KEY }} 
       - name: Initialize Terraform
         run: terraform -chdir=terraform init
+      - name: Create temporary credentials file
+        run: |
+          echo "${{ secrets.GCP_SA_KEY }}" > $HOME/gcp-credentials.json
       - name: Plan Terraform
-        run: terraform -chdir=terraform plan -var "credentials_file=${{ secrets.GCP_SA_KEY }}"
+        run: terraform -chdir=terraform plan
       - name: Apply Terraform
-        run: terraform -chdir=terraform apply -auto-approve -var "credentials_file=${{ secrets.GCP_SA_KEY }}"
+        run: terraform -chdir=terraform apply -auto-approve
