--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -77,6 +77,6 @@ jobs:
         run: |
           echo "${{ secrets.GCP_SA_KEY }}" > $HOME/gcp-credentials.json
       - name: Plan Terraform
-        run: terraform -chdir=terraform plan
+        run: terraform -chdir=terraform plan -var="credentials_file=$HOME/gcp-credentials.json"
       - name: Apply Terraform
-        run: terraform -chdir=terraform apply -auto-approve
+        run: terraform -chdir=terraform apply -auto-approve -var="credentials_file=$HOME/gcp-credentials.json"
