--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -76,6 +76,8 @@ jobs:
       - name: Create temporary credentials file
         run: |
           printf '%s' "${{ secrets.GCP_SA_KEY }}" > $HOME/gcp-credentials.json
+      - name: Debug credentials file
+        run: head -n 1 $HOME/gcp-credentials.json        
       - name: Plan Terraform
         run: terraform -chdir=terraform plan -var="credentials_file=$HOME/gcp-credentials.json"
       - name: Apply Terraform
