--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -71,11 +71,13 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }} 
-      - name: Debug GCP Authentication
-        run: gcloud auth list && gcloud config list
       - name: Initialize Terraform
         run: terraform -chdir=terraform init        
       - name: Plan Terraform
-        run: terraform -chdir=terraform plan
+        run: |
+          export TF_VAR_credentials_file="${{ secrets.GCP_SA_KEY }}"
+          terraform -chdir=terraform plan
       - name: Apply Terraform
-        run: terraform -chdir=terraform apply -auto-approve
+        run: |
+          export TF_VAR_credentials_file="${{ secrets.GCP_SA_KEY }}"
+          terraform -chdir=terraform apply -auto-approve
