--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -80,6 +80,9 @@ jobs:
         run: |
           export TF_VAR_credentials_file="$(pwd)/credentials.json"
           terraform -chdir=terraform plan
+      - name: Import existing firewall rule
+        run: |
+          terraform -chdir=terraform import google_compute_firewall.allow-http projects/wine-quality-prediction-450400/global/firewalls/allow-http
       - name: Apply Terraform
         run: |
           export TF_VAR_credentials_file="$(pwd)/credentials.json"
