--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -5,7 +5,7 @@ WORKDIR /app
 COPY pyproject.toml poetry.lock ./
 RUN pip install --no-cache-dir poetry && poetry install --no-root
 
-COPY app/ .
+COPY . .
 
 EXPOSE 8000
 
