fix: import instance

--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -91,6 +91,11 @@ jobs:
           export TF_VAR_credentials_file="$(pwd)/credentials.json"
           export TF_VAR_gcp_ssh_public_key="$(pwd)/ssh_key.pub"
           terraform -chdir=terraform import google_artifact_registry_repository.wine-quality-prediction-api projects/wine-quality-prediction-450400/locations/europe-west1/repositories/wine-quality-prediction-api
+      - name: Import existing compute instance
+        run: |
+          export TF_VAR_credentials_file="$(pwd)/credentials.json"
+          export TF_VAR_gcp_ssh_public_key="$(pwd)/ssh_key.pub"
+          terraform -chdir=terraform import google_compute_instance.wine-quality-prediction_instance projects/wine-quality-prediction-450400/zones/europe-west1-b/instances/wine-quality-prediction-instance
       - name: Plan Terraform
         run: |
           export TF_VAR_credentials_file="$(pwd)/credentials.json"
