--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -19,9 +19,12 @@ jobs:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
       - name: Configure Docker for GCP
         run: gcloud auth configure-docker europe-west1-docker.pkg.dev
-      - name: Pull model with DVC
+      - name: Install Poetry
+        run: pip install poetry
+      - name: Install dependencies
+        run: poetry install
+      - name: Pull model from DVC
         run: |
-          pip install dvc-gs
           poetry run dvc pull app/model/red_wine_model.pkl
       - name: Build and push Docker image
         run: |
