--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "evidently (>=0.6.1,<0.7.0)",
     "prometheus-client (>=0.21.1,<0.22.0)",
     "dvc-gs (>=3.0.1,<4.0.0)",
+    "streamlit (>=1.42.0,<2.0.0)",
 ]
 
 [tool.poetry]
