--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -1,15 +1,61 @@
-name: Deploy Streamlit App to GCP
+name: Deploy APP to GCP
 
 on:
-    workflow_run:
-      workflows: ["Deploy API to GCP"]
-      types:
-        - completed
-    workflow_dispatch:
+  workflow_run:
+    workflows: ["Deploy Infrastructure to GCP"]
+    types:
+      - completed
+  workflow_dispatch:
 
 jobs:
-  build-push:
-    name: Build and Push Streamlit Docker Image
+  deploy-api:
+    name: Deploy API to Cloud Run
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Authenticate with GCP
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Configure Docker for GCP
+        run: gcloud auth configure-docker europe-west1-docker.pkg.dev
+
+      - name: Install Poetry
+        run: pip install poetry
+
+      - name: Install dependencies
+        run: poetry install
+
+      - name: Pull model from DVC
+        run: |
+          poetry run dvc pull app/model/red_wine_model.pkl
+
+      - name: Build and push Docker image
+        run: |
+          docker build -t europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/wine-quality-prediction-api/wine-quality-prediction-api:latest -f Dockerfile.api .
+          docker push europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/wine-quality-prediction-api/wine-quality-prediction-api:latest
+
+      - name: Deploy to Compute Engine via SSH
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.GCP_VM_IP }}
+          username: ${{ secrets.GCP_VM_USER }}
+          key: ${{ secrets.GCP_SSH_PRIVATE_KEY }}
+          script: |
+            echo '${{ secrets.GCP_SA_KEY }}' > ~/gcp-sa-key.json
+            sudo gcloud auth activate-service-account --key-file ~/gcp-sa-key.json --quiet
+            ACCESS_TOKEN=$(gcloud auth print-access-token)
+            sudo docker login -u oauth2accesstoken -p "$ACCESS_TOKEN" https://europe-west1-docker.pkg.dev
+            sudo docker pull europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/wine-quality-prediction-api/wine-quality-prediction-api:latest
+            sudo docker stop wine-quality-prediction-api || true
+            sudo docker rm wine-quality-prediction-api || true
+            sudo docker run -d -p 80:8000 --name wine-quality-prediction-api europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/wine-quality-prediction-api/wine-quality-prediction-api:latest
+
+  deploy-app:
+    name: Deploy Streamlit App to Cloud Run
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -25,32 +71,14 @@ jobs:
 
       - name: Build and push Docker image for Streamlit App
         run: |
-          docker build -t europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/wine-quality-prediction-app/wine-quality-prediction-app:latest -f Dockerfile.streamlit .
+          docker build -f Dockerfile.streamlit -t europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/wine-quality-prediction-app/wine-quality-prediction-app:latest .
           docker push europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/wine-quality-prediction-app/wine-quality-prediction-app:latest
 
-  terraform-deploy:
-    name: Deploy Streamlit App to Cloud Run via Terraform
-    needs: build-push
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Authenticate with GCP
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.4.6
-
-      - name: Terraform Init
-        run: terraform -chdir=streamlit init
-
-      - name: Terraform Plan
-        run: terraform -chdir=streamlit plan -var="project_id=${{ secrets.GCP_PROJECT_ID }}" -var="region=europe-west1"
-
-      - name: Terraform Apply
-        run: terraform -chdir=streamlit apply -auto-approve -var="project_id=${{ secrets.GCP_PROJECT_ID }}" -var="region=europe-west1"
+      - name: Deploy Streamlit App to Cloud Run
+        run: |
+          gcloud run deploy wine-quality-prediction-app \
+            --image europe-west1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/wine-quality-prediction-app/wine-quality-prediction-app:latest \
+            --platform managed \
+            --region europe-west1 \
+            --allow-unauthenticated
+            
